ui-fix: changed overflow settings for the tables

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
 .answer-boxes{
     font-family: 'Secular One', sans-serif;
 }
+
+.brand_name{
+    padding-left: 30vw;
+}
